infra/k8s/toy-system/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: toy-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      tolerations:
        - key: "node-type"
          operator: "Equal"
          value: "low-power"
          effect: "NoSchedule"
      containers:
        - name: frontend
          image: localhost:5000/frontend:202609221145-0824599
          ports:
            - containerPort: 80
        - name: nginx-exporter
          image: nginx/nginx-prometheus-exporter:1.1.0
          args:
            - -nginx.scrape-uri=http://127.0.0.1:8080/nginx_status
          ports:
            - containerPort: 9113
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - frontend    # 换成你实际的app标签值
            topologyKey: kubernetes.io/hostname
