infra/k8s/toy-system/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: toy-system
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: metrics
      port: 9113
      targetPort: 9113
